--- a/chat-scaling-out/src/main/resources/application.properties
+++ b/chat-scaling-out/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:h2:tcp://localhost:9092/mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
 #server.port=9090
+#debug=true
